# ipa_bert_test

./: .gitignore  README.md  flake.nix  generate_ipa_dataset.py  pyproject.toml  quick_experiment.ipynb  testing.ipynb
